--- a/index.html
+++ b/index.html
@@ -3,23 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ตรวจสอบฟันสะอาด</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-tflite"></script>
+    <title>Teeth Analysis</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
 </head>
 <body>
     <div class="container">
-        <h1>ตรวจสอบฟันสะอาด</h1>
-        <p>อัพโหลดรูปหรือถ่ายรูปฟันของคุณ แล้วกดปุ่ม "ตรวจสอบฟัน"</p>
-
-        <input type="file" id="upload" accept="image/*" capture="camera" />
-        <img id="preview" src="#" alt="Preview" style="display: none;" />
-        
-        <button id="check">ตรวจสอบฟัน</button>
-        <p id="result"></p>
+        <h1>Teeth Image Analysis</h1>
+        <input type="file" id="imageInput" accept="image/*">
+        <button id="analyzeButton">Analyze</button>
+        <div id="result"></div>
+        <canvas id="canvas" style="display:none;"></canvas>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
