--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 <body>
   <h1>Teeth Model Analysis</h1>
   
-  <!-- Form to upload image -->
+  <!-- ปุ่มเลือกไฟล์ -->
   <input type="file" id="image-input" accept="image/*">
   
-  <!-- Result -->
+  <!-- ปุ่มวิเคราะห์ -->
+  <button id="analyze-btn">วิเคราะห์</button>
+  
+  <!-- ผลลัพธ์ -->
   <div id="prediction-result">No file chosen</div>
   
   <script src="script.js"></script>
