--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Teeth Model Analysis</title>
   <link rel="stylesheet" href="style.css">
+
+  <!-- โหลดไลบรารี TensorFlow.js และ TensorFlow Lite -->
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-tflite"></script>
 </head>
 <body>
   <h1>Teeth Model Analysis</h1>
