--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Teeth Model Analysis</title>
   <link rel="stylesheet" href="style.css">
 
-  <!-- โหลดไลบรารี TensorFlow.js และ TensorFlow Lite -->
+  <!-- โหลดไลบรารี TensorFlow.js -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-tflite"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-converter"></script>
 </head>
 <body>
   <h1>Teeth Model Analysis</h1>
